<resources>
    <string name="app_name">Study English</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="usernameandemail">Tài khoản hoặc email</string>
    <string name="username">Tên tài khoản</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu </string>
    <string name="newpassword">Mật khẩu mới </string>
    <string name="verify">Nhập lại mật khẩu</string>
    <string name="sign_up">Đăng kí</string>
    <string name="back">Trở lại</string>
    <string name="new_user">Tạo tài khoản</string>
    <string name="action_logout">Đăng xuất</string>
    <string name="search">Tìm kiếm</string>
    <string name="searchva">Tìm kiếm từ việt - anh</string>
    <string name="irregular_verbs">Động từ bất quy tắc</string>
    <string name="setting">Cài đặt</string>
    <string name="information">Thông tin</string>
    <string name="result_search">Kết quả tìm thấy: </string>
    <string name="idioms_English">Thành ngữ</string>
    <string name="vocabulary">Từ vựng</string>
    <string name="reading">Kiểm tra đọc</string>
    <string name="listening">Kiểm tra nghe</string>
    <string name="grammar">Ngữ pháp</string>
    <string name="add">Thêm</string>
    <string name="searchword">Tra từ</string>
    <string name="forgot">Quên mật khẩu?</string>
    <string name="donthaveacc">Chưa có tài khoản? Đăng kí</string>
    <string name="continu">Tiếp tục</string>
    <string name="code">Mã xác nhận</string>
    <string name="select">Chọn bài test:</string>
    <string name="history">Lịch sử</string>
    <string name="submit">NỘP BÀI</string>
    <string name="exit">THOÁT</string>
</resources>