<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".validation.resetpassword_activity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/circle"
                    android:padding="10dp"
                    android:src="@drawable/img_authentication"
                    android:tint="@color/white" />

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="Vui lòng nhập email"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/linearLayout1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-10dp"
                android:rotation="45"
                android:src="@drawable/square" />

            <RelativeLayout

                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp">

                <ImageView
                    android:id="@+id/imageView_userIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/img_user"
                    android:tint="@color/white" />

                <EditText

                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imageView_userIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imageView_userIcon"
                    android:background="@color/editTextBG"
                    android:fontFamily="@font/montserrat_semibold"
                    android:hint="@string/email"
                    android:paddingLeft="20dp"
                    android:textSize="13dp" />
                <TextView
                    android:id="@+id/warning"
                    android:visibility="gone"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="error"
                    android:textColor="@color/colorRed"
                    android:layout_below="@+id/imageView_userIcon"></TextView>

            </RelativeLayout>

            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/verify"
                    android:tint="@color/white" />

                <EditText
                    android:id="@+id/verify_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/image1"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/image1"
                    android:background="@color/editTextBG"
                    android:hint="@string/code"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textSize="13sp"
                    android:fontFamily="@font/montserrat_semibold"/>

            </RelativeLayout>
            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/relativeLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout2"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/imageView_passwordIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/img_authentication"
                    android:tint="@color/white" />

                <EditText
                    android:id="@+id/new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imageView_passwordIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imageView_passwordIcon"
                    android:background="@color/editTextBG"
                    android:hint="@string/newpassword"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textSize="13sp"
                    android:fontFamily="@font/montserrat_semibold"/>

            </RelativeLayout>

            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/relativeLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayout3"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp">
                <ImageView
                    android:id="@+id/verify_pass"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/sercirity"
                    android:tint="@color/white" />

                <EditText
                    android:id="@+id/verify_newpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/verify_pass"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/verify_pass"
                    android:background="@color/editTextBG"
                    android:hint="@string/verify"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textSize="13sp"
                    android:fontFamily="@font/montserrat_semibold"/>


            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relativeLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayout4"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp">



            </RelativeLayout>

            <Button
                android:layout_marginTop="25dp"
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout4"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/colorPrimary"
                android:text="@string/continu"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_semibold"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/btnContinue"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:layerType="software"
                android:src="@drawable/dash" />
            <TextView
                android:id="@+id/backtolog1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView2"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/back"
                android:textSize="15dp"
                android:fontFamily="@font/montserrat_semibold"/>


        </RelativeLayout>



    </androidx.cardview.widget.CardView>

</RelativeLayout>
